--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "react-scripts": "1.0.17",
     "react-test-renderer": "^16.4.1"
   },
